--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB_HOST=mongodb+srv://DmSchko:fuQeLTV02024XPor@cluster0.j2yzv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_HOST=mongodb+srv://DmSchko:fuQeLTV02024XPor@cluster0.j2yzv.mongodb.net/fueltracker?retryWrites=true&w=majority&appName=Cluster0
+GOOGLE_PASSWORD=mtdz ggol ysce fvqg
+PORT=3000
