--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
-    "nanoid": "^5.0.8"
+    "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
