--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_HOST=mongodb+srv://DmSchko:fuQeLTV02024XPor@cluster0.j2yzv.mongodb.net/fueltracker?retryWrites=true&w=majority&appName=Cluster0
 GOOGLE_PASSWORD=mtdz ggol ysce fvqg
+SECRET_KEY=nZN3A4rYWc
+BASE_URL=http://localhost:3000
 PORT=3000
