fueltrack_server_signup_04

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mongodb+srv://DmSchko:fuQeLTV02024XPor@cluster0.j2yzv.mongodb.net/fueltracker?retryWrites=true&w=majority&appName=Cluster0
+DB_HOST=mongodb+srv://DmSchko:PnvPBRhSBJFVzi5s@cluster0.ssfgew9.mongodb.net/fueltrackers?appName=Cluster0
 GOOGLE_PASSWORD=mtdz ggol ysce fvqg
 SECRET_KEY=nZN3A4rYWc
 BASE_URL=http://localhost:3000
